# ci-test

./: Cargo.toml
.github/workflows/: test.yml  win-build.yml
